docs: add header X-Device-ID
